@@ -5,6 +5,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Queue;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class Concesionaria {
 
@@ -15,21 +16,36 @@ public class Concesionaria {
         this.colaTaller = colaTaller;
     }
 
+    // ============================================================
+    // AGREGAR VEHÍCULOS
+    // ============================================================
+
     public void agregarVehiculo(Vehiculo v) {
-        if (!inventario.contains(v)) {
-            inventario.add(v);
-            if (v.isUsado()) colaTaller.add(v);
-        }
+        agregarSiNoExiste(v);
     }
 
-    // Para carga inicial desde archivo
+    /**
+     * Agrega el vehículo al inventario solo si no existe uno con el mismo UUID.
+     * También lo agrega a la cola del taller si está usado.
+     */
     public void agregarSiNoExiste(Vehiculo v) {
-        if (!inventario.contains(v)) {
+        boolean existe = inventario.stream()
+                .anyMatch(x -> x.getIdVehiculo().equals(v.getIdVehiculo()));
+
+        if (!existe) {
             inventario.add(v);
             if (v.isUsado()) colaTaller.add(v);
         }
     }
 
+    // ============================================================
+    // BÚSQUEDA AVANZADA
+    // ============================================================
+
+    /**
+     * Búsqueda flexible combinando marca, modelo, año y estado.
+     * Acepta coincidencias parciales (contains) para marca y modelo.
+     */
     public List<Vehiculo> buscarMultiples(String marca, String modelo, Integer anio, Boolean usado) {
 
         return inventario.stream()
@@ -41,17 +57,34 @@ public class Concesionaria {
                         || v.getModelo().toLowerCase().contains(modelo.toLowerCase()))
                 .filter(v -> anio == null || v.getAnioFabricacion() == anio)
                 .filter(v -> usado == null || v.isUsado() == usado)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public void eliminarPorId(UUID id) throws VehiculoNoEncontradoException {
-        boolean eliminado = inventario.removeIf(v -> v.getIdVehiculo().equals(id));
+    // ============================================================
+    // ELIMINACIÓN
+    // ============================================================
 
-        if (!eliminado) {
+    /**
+     * Elimina el vehículo que tenga el UUID especificado.
+     */
+    public void eliminarPorId(UUID id) throws VehiculoNoEncontradoException {
+
+        Vehiculo encontrado = inventario.stream()
+                .filter(v -> v.getIdVehiculo().equals(id))
+                .findFirst()
+                .orElse(null);
+
+        if (encontrado == null) {
             throw new VehiculoNoEncontradoException("No se encontró un vehículo con ese ID.");
         }
+
+        inventario.remove(encontrado);
+        colaTaller.remove(encontrado); // en caso de que estuviera en la cola
     }
 
+    // ============================================================
+    // LISTADO
+    // ============================================================
     public List<Vehiculo> listar() {
         return new ArrayList<>(inventario);
     }
